tests/unit/compile/cases/syntax-errors/05.doctype-unclosed.t
<!DOCTYPE foo bar
---- THROW% ----
Unexpected <EOF>; expected: ">", "'", '"' or <HtmlNameWord> in `%s` at line 1
